# cpp-ecs-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: fae_framework_config.h.in
include/: ecs_application.hpp  fae_application.hpp  fae_framework.hpp  fae_windowing.hpp  iapplication.hpp
include/fae_application/: ecs_application.hpp  iapplication.hpp
include/fae_windowing/: glfw_window.hpp  iwindow.hpp
src/: fae_application.hpp  fae_default_plugins.cpp  fae_default_plugins.hpp  fae_framework.cpp  fae_framework.hpp  fae_input.cpp  fae_input.hpp  fae_math.cpp  fae_math.hpp  fae_pch.cpp  fae_pch.hpp  fae_physics.cpp  fae_physics.hpp  fae_raylib.hpp  fae_rendering.cpp  fae_rendering.hpp
src/application/: ecs_application.cpp
src/fae_application/: application.cpp  application.hpp  application_step.hpp  entity.hpp
src/fae_math/: angle.hpp
src/fae_raylib/: Transform2.hpp  Transform3.hpp  raylib_operator_overloads.hpp  rlights.h
src/fae_rendering/: fae_rendering_2d.hpp  fae_rendering_3d.cpp  fae_rendering_3d.hpp  fae_rendering_common.hpp
src/windowing/: glfw_window.cpp
